gen/antlr/AngulerParser.java
// Generated from C:/Users/Rahaf/Desktop/comp/compiler-project/compiler/src/antlr/AngulerParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngulerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_BRACE=1, CLOSE_BRACE=2, OPEN_PAREN=3, CLOSE_PAREN=4, OPEN_BRACKET=5, 
		CLOSE_BRACKET=6, COMMA=7, SEMICOLON=8, DOT=9, COLON=10, QUOTE=11, EQUAL=12, 
		IS_EQUAL=13, NOT_EQUAL=14, IS_EQUAL_TYPE=15, NOT_EQUAL_TYPE=16, BACK_SLASH=17, 
		ARROW=18, COMPONENT=19, ANGULAR=20, INCREMENT=21, DECREMENT=22, VOID=23, 
		OPENTAG=24, CLOSETAG=25, LESS_EQUAL=26, GRETER_EQUAL=27, SLASH=28, OPERATOR=29, 
		DOLLAR=30, AND=31, OR=32, PIPE=33, TRY=34, CATCH=35, FINALLY=36, NEW=37, 
		THIS=38, TRUE=39, TYPE=40, INTERFACE=41, IMPLEMENTS=42, EXTENDS=43, ABSTRACT=44, 
		READONLY=45, ASYNC=46, AWAIT=47, OF=48, IN=49, INSTANCEOF=50, TYPEOF=51, 
		DELETE=52, PLUS=53, MINUS=54, MULT=55, MOD=56, BIT_AND=57, BIT_XOR=58, 
		BIT_NOT=59, SHIFT_LEFT=60, SHIFT_RIGHT=61, UNSIGNED_SHIFT_RIGHT=62, QUESTION=63, 
		ELLIPSIS=64, PLUS_EQUAL=65, MINUS_EQUAL=66, MULT_EQUAL=67, DIV_EQUAL=68, 
		MOD_EQUAL=69, AND_EQUAL=70, OR_EQUAL=71, XOR_EQUAL=72, SHIFT_LEFT_EQUAL=73, 
		SHIFT_RIGHT_EQUAL=74, UNSIGNED_SHIFT_RIGHT_EQUAL=75, GET=76, SET=77, BACKTICK=78, 
		TEMPLATE_STRING_EXPRESSION=79, ANY=80, UNKNOWN=81, NEVER=82, BOOLEAN=83, 
		NUMBER=84, STRING=85, SYMBOL=86, OBJECT=87, AT=88, NAMESPACE=89, SELECTOR=90, 
		STANDALONE=91, IMPORTS=92, TEMPLATE=93, TEMPLATE_URL=94, STYLES=95, STYLE_URLS=96, 
		STYLE_URL=97, NG_IF=98, NG_FOR=99, NG_CLASS=100, NG_STYLE=101, NG_MODEL=102, 
		DIRECTIVE=103, STYLE_ATTR=104, ALT_ATTR=105, SRC_ATTR=106, HREF_ATTR=107, 
		DIV_TAG=108, H1_TAG=109, H2_TAG=110, H3_TAG=111, P_TAG=112, IMG_TAG=113, 
		A_TAG=114, SPAN_TAG=115, BUTTON_TAG=116, BINDING=117, EVENT_BINDING=118, 
		INTERPOLATION=119, FUNCTION=120, PUBLIC=121, PRIVATE=122, PROTECTED=123, 
		CLASS=124, IMPORT=125, FROM=126, EXPORT=127, IF=128, ELSE=129, FOR=130, 
		WHILE=131, DO=132, SWITCH=133, CASE=134, DEFAULT=135, RETURN=136, BREAK=137, 
		CONTINUE=138, FALSE=139, NULL=140, UNDEFINED=141, CONST=142, LET=143, 
		VAR=144, IDENTIFIER=145, STRING_LITERAL=146, TEMPLATE_LITERAL=147, DECIMAL_INTEGER_LITERAL=148, 
		HEX_INTEGER_LITERAL=149, OCTAL_INTEGER_LITERAL=150, BINARY_INTEGER_LITERAL=151, 
		FLOAT_LITERAL=152, LINE_COMMENT=153, BLOCK_COMMENT=154, WS=155, HTML_WS=156, 
		HTML_OPEN_BRACE=157, HTML_CLOSE_BRACE=158, HTML_CLOSE_PAREN=159, HTML_OPENTAG=160, 
		HTML_TEXT=161, MUL=162, SUM=163, MIN=164, NOT=165, HASH=166, NG_CONTENT=167, 
		NG_TEMPLATE=168;
	public static final int
		RULE_prog = 0, RULE_anguler_import = 1, RULE_component_declaration = 2, 
		RULE_component_metadata = 3, RULE_metadata_property = 4, RULE_selector_property = 5, 
		RULE_standalone_property = 6, RULE_imports_property = 7, RULE_template_property = 8, 
		RULE_templateUrl_property = 9, RULE_styles_property = 10, RULE_styleUrls_property = 11, 
		RULE_type_annotation = 12, RULE_base_type_annotation = 13, RULE_primitive_type = 14, 
		RULE_array_type = 15, RULE_structured_type = 16, RULE_type_pair = 17, 
		RULE_class_declaration = 18, RULE_class_body = 19, RULE_method_declaration = 20, 
		RULE_method_body = 21, RULE_function_declaration = 22, RULE_function_body = 23, 
		RULE_parameter_list = 24, RULE_parameter = 25, RULE_function_call = 26, 
		RULE_declaraiton_keywords = 27, RULE_variable_declaration = 28, RULE_assignment = 29, 
		RULE_value = 30, RULE_literal_value = 31, RULE_member_expression = 32, 
		RULE_dot_value = 33, RULE_arithmetic_expression = 34, RULE_unary_expression = 35, 
		RULE_relational_expression = 36, RULE_equality_expression = 37, RULE_logical_expression = 38, 
		RULE_conditional_expression = 39, RULE_expression = 40, RULE_json_object = 41, 
		RULE_json_pair = 42, RULE_imports_array = 43, RULE_array = 44, RULE_instruction = 45, 
		RULE_conditional_statements = 46, RULE_block = 47, RULE_if_statement = 48, 
		RULE_for_statement = 49, RULE_switch_statement = 50, RULE_switch_body = 51, 
		RULE_switch_case = 52, RULE_switch_default = 53, RULE_while_statement = 54, 
		RULE_do_while_statement = 55, RULE_continue_Statement = 56, RULE_return_Statement = 57, 
		RULE_break_statement = 58, RULE_expressionSequence = 59, RULE_interface_Declaration = 60, 
		RULE_generic_Type = 61, RULE_eos = 62, RULE_html_value = 63, RULE_tags = 64, 
		RULE_open_tag = 65, RULE_attrs = 66, RULE_html_attribute = 67, RULE_close_tag = 68, 
		RULE_single_tag = 69, RULE_template_variable = 70, RULE_ng_content = 71, 
		RULE_ng_template = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "anguler_import", "component_declaration", "component_metadata", 
			"metadata_property", "selector_property", "standalone_property", "imports_property", 
			"template_property", "templateUrl_property", "styles_property", "styleUrls_property", 
			"type_annotation", "base_type_annotation", "primitive_type", "array_type", 
			"structured_type", "type_pair", "class_declaration", "class_body", "method_declaration", 
			"method_body", "function_declaration", "function_body", "parameter_list", 
			"parameter", "function_call", "declaraiton_keywords", "variable_declaration", 
			"assignment", "value", "literal_value", "member_expression", "dot_value", 
			"arithmetic_expression", "unary_expression", "relational_expression", 
			"equality_expression", "logical_expression", "conditional_expression", 
			"expression", "json_object", "json_pair", "imports_array", "array", "instruction", 
			"conditional_statements", "block", "if_statement", "for_statement", "switch_statement", 
			"switch_body", "switch_case", "switch_default", "while_statement", "do_while_statement", 
			"continue_Statement", "return_Statement", "break_statement", "expressionSequence", 
			"interface_Declaration", "generic_Type", "eos", "html_value", "tags", 
			"open_tag", "attrs", "html_attribute", "close_tag", "single_tag", "template_variable", 
			"ng_content", "ng_template"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", null, "'['", "']'", "','", "';'", "'.'", "':'", 
			"'''", "'='", "'=='", "'!='", "'==='", "'!=='", "'\\'", "'=>'", "'@Component'", 
			"'@angular'", "'++'", "'--'", "'void'", null, "'>'", "'<='", "'>='", 
			"'/'", null, "'$'", "'&&'", "'||'", "'|'", "'try'", "'catch'", "'finally'", 
			"'new'", "'this'", "'true'", "'type'", "'interface'", "'implements'", 
			"'extends'", "'abstract'", "'readonly'", "'async'", "'await'", "'of'", 
			"'in'", "'instanceof'", "'typeof'", "'delete'", "'+'", "'-'", "'*'", 
			"'%'", "'&'", "'^'", "'~'", "'<<'", "'>>'", "'>>>'", "'?'", "'...'", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", 
			"'>>='", "'>>>='", "'get'", "'set'", "'`'", "'${'", "'any'", "'unknown'", 
			"'never'", "'boolean'", "'number'", "'string'", "'symbol'", "'object'", 
			"'@'", "'namespace'", "'selector'", "'standalone'", "'imports'", "'template'", 
			"'templateUrl'", "'styles'", "'styleUrls'", "'styleUrl'", "'*ngIf'", 
			"'*ngFor'", "'[ngClass]'", "'[ngStyle]'", "'[(ngModel)]'", null, "'style'", 
			"'alt'", "'src'", "'href'", "'div'", "'h1'", "'h2'", "'h3'", "'p'", "'img'", 
			"'a'", "'span'", "'button'", null, null, null, "'function'", "'public'", 
			"'private'", "'protectd'", "'class'", "'import'", "'from'", "'export'", 
			"'if'", "'else'", "'for'", "'while'", "'do'", "'switch'", "'case'", "'default'", 
			"'return'", "'break'", "'continue'", "'false'", "'null'", "'undefined'", 
			"'const'", "'let'", "'var'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "COMMA", "SEMICOLON", "DOT", "COLON", "QUOTE", "EQUAL", 
			"IS_EQUAL", "NOT_EQUAL", "IS_EQUAL_TYPE", "NOT_EQUAL_TYPE", "BACK_SLASH", 
			"ARROW", "COMPONENT", "ANGULAR", "INCREMENT", "DECREMENT", "VOID", "OPENTAG", 
			"CLOSETAG", "LESS_EQUAL", "GRETER_EQUAL", "SLASH", "OPERATOR", "DOLLAR", 
			"AND", "OR", "PIPE", "TRY", "CATCH", "FINALLY", "NEW", "THIS", "TRUE", 
			"TYPE", "INTERFACE", "IMPLEMENTS", "EXTENDS", "ABSTRACT", "READONLY", 
			"ASYNC", "AWAIT", "OF", "IN", "INSTANCEOF", "TYPEOF", "DELETE", "PLUS", 
			"MINUS", "MULT", "MOD", "BIT_AND", "BIT_XOR", "BIT_NOT", "SHIFT_LEFT", 
			"SHIFT_RIGHT", "UNSIGNED_SHIFT_RIGHT", "QUESTION", "ELLIPSIS", "PLUS_EQUAL", 
			"MINUS_EQUAL", "MULT_EQUAL", "DIV_EQUAL", "MOD_EQUAL", "AND_EQUAL", "OR_EQUAL", 
			"XOR_EQUAL", "SHIFT_LEFT_EQUAL", "SHIFT_RIGHT_EQUAL", "UNSIGNED_SHIFT_RIGHT_EQUAL", 
			"GET", "SET", "BACKTICK", "TEMPLATE_STRING_EXPRESSION", "ANY", "UNKNOWN", 
			"NEVER", "BOOLEAN", "NUMBER", "STRING", "SYMBOL", "OBJECT", "AT", "NAMESPACE", 
			"SELECTOR", "STANDALONE", "IMPORTS", "TEMPLATE", "TEMPLATE_URL", "STYLES", 
			"STYLE_URLS", "STYLE_URL", "NG_IF", "NG_FOR", "NG_CLASS", "NG_STYLE", 
			"NG_MODEL", "DIRECTIVE", "STYLE_ATTR", "ALT_ATTR", "SRC_ATTR", "HREF_ATTR", 
			"DIV_TAG", "H1_TAG", "H2_TAG", "H3_TAG", "P_TAG", "IMG_TAG", "A_TAG", 
			"SPAN_TAG", "BUTTON_TAG", "BINDING", "EVENT_BINDING", "INTERPOLATION", 
			"FUNCTION", "PUBLIC", "PRIVATE", "PROTECTED", "CLASS", "IMPORT", "FROM", 
			"EXPORT", "IF", "ELSE", "FOR", "WHILE", "DO", "SWITCH", "CASE", "DEFAULT", 
			"RETURN", "BREAK", "CONTINUE", "FALSE", "NULL", "UNDEFINED", "CONST", 
			"LET", "VAR", "IDENTIFIER", "STRING_LITERAL", "TEMPLATE_LITERAL", "DECIMAL_INTEGER_LITERAL", 
			"HEX_INTEGER_LITERAL", "OCTAL_INTEGER_LITERAL", "BINARY_INTEGER_LITERAL", 
			"FLOAT_LITERAL", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "HTML_WS", "HTML_OPEN_BRACE", 
			"HTML_CLOSE_BRACE", "HTML_CLOSE_PAREN", "HTML_OPENTAG", "HTML_TEXT", 
			"MUL", "SUM", "MIN", "NOT", "HASH", "NG_CONTENT", "NG_TEMPLATE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngulerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngulerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngulerParser.EOF, 0); }
		public List<Anguler_importContext> anguler_import() {
			return getRuleContexts(Anguler_importContext.class);
		}
		public Anguler_importContext anguler_import(int i) {
			return getRuleContext(Anguler_importContext.class,i);
		}
		public List<Component_declarationContext> component_declaration() {
			return getRuleContexts(Component_declarationContext.class);
		}
		public Component_declarationContext component_declaration(int i) {
			return getRuleContext(Component_declarationContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				anguler_import();
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(152); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(151);
				component_declaration();
				}
				}
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMPONENT );
			setState(156);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Anguler_importContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngulerParser.IMPORT, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(AngulerParser.OPEN_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AngulerParser.IDENTIFIER, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AngulerParser.CLOSE_BRACE, 0); }
		public TerminalNode FROM() { return getToken(AngulerParser.FROM, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(AngulerParser.STRING_LITERAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(AngulerParser.SEMICOLON, 0); }
		public Anguler_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anguler_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterAnguler_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitAnguler_import(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitAnguler_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Anguler_importContext anguler_import() throws RecognitionException {
		Anguler_importContext _localctx = new Anguler_importContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anguler_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(IMPORT);
			setState(159);
			match(OPEN_BRACE);
			setState(160);
			match(IDENTIFIER);
			setState(161);
			match(CLOSE_BRACE);
			setState(162);
			match(FROM);
			setState(163);
			match(STRING_LITERAL);
			setState(164);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_declarationContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(AngulerParser.COMPONENT, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(AngulerParser.OPEN_PAREN, 0); }
		public Component_metadataContext component_metadata() {
			return getRuleContext(Component_metadataContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(AngulerParser.CLOSE_PAREN, 0); }
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Component_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_declarationContext component_declaration() throws RecognitionException {
		Component_declarationContext _localctx = new Component_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_component_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(COMPONENT);
			setState(167);
			match(OPEN_PAREN);
			setState(168);
			component_metadata();
			setState(169);
			match(CLOSE_PAREN);
			setState(170);
			class_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_metadataContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACE() { return getToken(AngulerParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(AngulerParser.CLOSE_BRACE, 0); }
		public List<Metadata_propertyContext> metadata_property() {
			return getRuleContexts(Metadata_propertyContext.class);
		}
		public Metadata_propertyContext metadata_property(int i) {
			return getRuleContext(Metadata_propertyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngulerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngulerParser.COMMA, i);
		}
		public Component_metadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_metadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent_metadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent_metadata(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent_metadata(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_metadataContext component_metadata() throws RecognitionException {
		Component_metadataContext _localctx = new Component_metadataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_component_metadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(OPEN_BRACE);
			{
			setState(173);
			metadata_property();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(174);
				match(COMMA);
				setState(175);
				metadata_property();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(181);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
